[package]
name = "illmatic-scheduling"
version = "0.1.2"
authors = ["Kaede Fujisaki <kaede@hexe.net>"]
edition = "2018"
license = "AGPL-3.0-or-later"

description = "Scheduling library avoiding to dirturb someone."
repository = "https://github.com/ledyba/illmatic-scheduling"
homepage = "https://github.com/ledyba/illmatic-scheduling"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
regex = "1.5.4"
lazy_static = "1.4.0"
futures = "0.3.15"
